Updated with the renamed js file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <p>To start, choose the Math function to operate by typing only the number.<br>
     For example, if you want to operate the addition function, simply type 1 <br></p>
-    <script src="Addition.js"></script>
+    <script src="mathbasic.js"></script>
     
 </body>
 </html>
