Add a message in para

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <p>To start, choose the Math function to operate by typing only the number.<br>
-    For example, if you want to operate the addition function, simply type 1 <br></p>
+    For example, if you want to operate the addition function, simply type 1 <br>
+    To run another operation, please click "Go Live" again from the index.html file.</p>
     <script src="mathbasic.js"></script>
     
 </body>
