Change message and add a helloname js

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <title>Basic Math with JS</title>
 </head>
 <body>
-    <p>To start, choose the Math function to operate by typing only the number.<br>
+
+    <p>To start a math function, choose the Math function to operate from the list provided by typing only the number.<br>
     For example, if you want to operate the addition function, simply type 1 <br>
-    To run another operation, please click "Go Live" again from the index.html file.</p>
+    To run another operation, please click "Go Live" again from the index.html file.
+    Please provide your name by clicking the button which will appear after you are done with a function.
+    </p> <br>
     <script src="mathbasic.js"></script>
-    
+
+<button onclick="myFunction()">Type in your name</button>  
+    <p id="demo"></p> 
+    <script src="Helloname.js"></script>
 </body>
 </html>
